Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-26156

[REG]: drawPolyline() does not draw solid line when anti-aliasing is turned off

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P2: Important
    • 4.8.5
    • 4.8.2, 5.0.1
    • GUI: Painting
    • None
    • Windows 7, linux
    • b528e1324add2208abf8f83fb51a8bd2183157f5 (qtbase) 56e4daccf9b1b9c2b3d7103cabc40fb406a23df3 (4.8)

    Description

      Attached is an example and an image which demonstrates this issue. When using Qt4.7.5, line is solid but with 4.8.2 it is not. With anti-aliasing line is solid.

      Attachments

        1. basicdrawing.zip
          14 kB
        2. BitmapRenderTest2.zip
          0.7 kB
        3. images.png
          images.png
          209 kB
        4. qt4polylinegaps.cpp
          2 kB
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            rodal Samuel Rødal
            qtcomsupport Qt Support
            Votes:
            1 Vote for this issue
            Watchers:
            5 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes